Fix for onMount scroll when on mobile device

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -57,7 +57,8 @@ body::before {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height:40rem;
+  /* height:40rem; */
+  max-height:80vh;
   overflow-y: auto;
   gap:3rem;
   background-color: #fffcf6;
